--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
    margin: 0px;
    background-color: #000000cc;
    display: flex;
-   justify-content: center;
+   justify-content: start;
    align-items: center;
    /* z-index: auto; */
    
@@ -18,21 +18,29 @@ body {
 }
 
 #header {
-   grid-column: 2 / 10;
-   grid-row: 2;
+   grid-column: 1 / 14;
+   grid-row: 1;
+   margin-top: 20px;
+   margin-left: 18px;
    display: flex;
-   justify-content: space-around;
-   align-items: center;
-   gap: 100px;
+   height: max-content;
    z-index: 1;
+   background-color: #000000af;
+   border-radius: 3px;
+   border: #d1d1d19b 3px double;
+   outline: #80808083 1px outset;
+   padding: 10px;
+   gap: 30px;
 }
 
 .tab {
    width: 250px;
    height: 50px;
+   margin: 10px 25px;
    background-color: #ffffff;
    display: flex;
    justify-content: center;
+   align-self: end;
    align-items: center;
    font-size: 28px;
    font-weight: bold;
@@ -42,7 +50,7 @@ body {
 
 #home-img {
    height: 100%;
-   width: 94%;
+   width: 100%;
    position: absolute;
    align-self: flex-start;
    z-index: 0;
@@ -52,22 +60,7 @@ body {
    height: 130px;
    border-radius: 80px;
 }
-#banner {
-   height: min-content;
-   grid-column: 1 / 11;
-   color: #d6d6d6;
-   display: flex;
-   /* justify-content: center; */
-   align-items: center;
-   background-color: #000000af;
-   border-radius: 3px;
-   border: #d1d1d19b 3px double;
-   outline: #80808083 1px outset;
-   padding: 10px;
-   padding-left: 35px;
-   gap: 40px;
-   z-index: 0;
-}
+
 
 #name {
    font-size: 60px;
@@ -76,21 +69,23 @@ body {
    font-family: fantasy;
    align-self: flex-start;
    z-index: 1;
-   
+   flex-shrink: 0;
+   width: 40%;
+   color: white;   
    
 }
 
 #schedule {
    height: max-content;
-   width: 98%;
+   margin-top: 20px;
    background-color: #000000af;
    color: #ffffff;
    font-size: 20px;
    display: flex;
    flex-flow: row wrap;
-   grid-column: 1 / 11;
+   grid-column: 1 / 14;
    grid-row: 3;
-   margin-left: 13px;
+   margin-left: 18px;
    padding-bottom: 10px;
    justify-content: space-evenly;
    align-items: center;
@@ -123,7 +118,7 @@ body {
    align-items: center;
    
 }
-.label {
+.label , .wtf {
    width: 212px;
    background-color: #000000;
    /* margin-bottom: 10px; */
@@ -138,41 +133,21 @@ body {
    
 }
 .wtf {
-   width: 212px;
-   background-color: #000000;
-   /* margin-bottom: 10px; */
-   border-radius: 3px;
-   border: 1px double #8b8b8b67;
-   outline: 1px outset #b4b4b4b9;
-   padding-bottom: 3px;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   align-items: center;
    margin-bottom: 18px;
-   
 }
-.wtf {
-}
-
-.time-odd {
-   /* align-self: flex-start; */
-}
-.time-even {
-   align-self: flex-end;
-}
-
 
 #content {
    z-index: 1;
    /* height: 960px; */
-   width: 1800px;
+   width: 100%;
    display: grid;
-   grid-template-columns: 225px 225px 112.5px 112.5px 225px 225px 5px 225px 225px 190px;
-   grid-template-rows: 80px 80px 20px 160px 20px 220px 220px 220px 220px 220px 220px;
-   z-index: 1; 
+   grid-template-columns: 225px 225px 112.5px 112.5px 225px 225px 5px 225px 225px 190px 220px;
+   grid-template-rows: 80px 80px 20px 160px 20px 220px 220px 220px 220px 220px ;
+
    padding-bottom: 10px;
+   padding-left: 50px;
 }
+
 #about {
    z-index: 1;
    grid-area: 6 / 1 / 12 / 7;
@@ -184,7 +159,7 @@ body {
    margin-left: 13px;
    display: grid;
    grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
-   grid-template-rows: 100px  20px 50px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+   grid-template-rows: 100px  20px 50px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 150px;
    /* margin-bottom: 10px;*/
    border-radius: 2px;
    border: 1px double #8b8b8b57;
@@ -199,14 +174,14 @@ h2 {
    font-style: oblique;
    margin-left: 20px;
 }
-.about-left-one, .about-left-two,
-.about-right-one, .about-right-two {
+#about-one, #about-two,
+#about-three, #about-four {
    font-family: helvetica;
    font-size: 25px;
    font-weight: bold;
    outline: 2px inset #b4b4b496;
 }
-.about-left-one {
+#about-one {
    align-self: flex-start;
    display: flex;
    flex-flow: row wrap;
@@ -214,10 +189,10 @@ h2 {
    grid-row: 3;
    padding: 10px;
 }
-.about-left-two {
+#about-two {
    height: min-content;
    grid-column:  8/ 11;
-   grid-row: 4 / 7;
+   grid-row: 6;
    display: flex;
    flex-direction: column;
    text-align: left;
@@ -225,16 +200,17 @@ h2 {
    margin-left: 5px;
    padding: 10px;
 }
-.about-right-one {
-   grid-row: 9 / 13;
+#about-three {
+   grid-row: 14 / 18;
    grid-column: 8 / 12;
    text-align: center;
    font-size: 25px;
    padding: 1px;
+   margin-top: 100px;
    overflow: hidden;
 }
-.about-right-two {
-   grid-row: 9 / 14;
+#about-four {
+   grid-row: 11 / 18;
    grid-column: 1 / 7;
    background-color: #0000004f;
    height: min-content;
@@ -266,15 +242,18 @@ h2 {
    width: 100%;
    height: 500px;
 }
-.about-list {
+#about-list {
    width: 40%;
    text-align: left;
    text-indent: 1px;
    font-style: oblique;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
 }
 
 #menu {
-   grid-column: 8 / 11;
+   grid-column: 8 / 14;
    grid-row: 6 / 9;
    background-color: #323136c4;
    border-radius: 40px;
@@ -283,6 +262,8 @@ h2 {
    flex-direction: column;
    align-items: center;
    gap: 10px;
+   z-index: 1;
+   margin-top: 10px;
 }
 
 #menu-head {
@@ -313,7 +294,7 @@ h2 {
 
 #vip {
    grid-row: 9 / 12;
-   grid-column:  7 / 11;
+   grid-column:  7 / 14;
    width: 100%;
    height: 100%;
 }
