--- a/src/style.css
+++ b/src/style.css
@@ -3,202 +3,259 @@
    box-sizing: border-box;
 }
 
+HTML {
+   scroll-behavior: smooth;
+}
+
+
 body {
    /* height: 97vh; */
    margin: 0px;
-   background-color: #000000cc;
    display: flex;
    justify-content: start;
    align-items: center;
    /* z-index: auto; */
-   
    /* font-stretch: ultra-expanded; */
+   background-color: #242627;
    /* font-style: oblique; */
    /* padding-left: 20px; */
 }
 
-#header {
-   grid-column: 1 / 14;
-   grid-row: 1;
-   margin-top: 20px;
-   margin-left: 18px;
+#wrapper {
    display: flex;
-   height: max-content;
+   flex-direction: column;
+   justify-content: space-between;
+   
+}
+
+#home-img-div {
+   z-index: -1;
+   opacity: 40%;
+   margin-left: 92px;
+}
+#home-img {
+   height: 910px;
+   width: 1750px;
+   position: absolute;
+   /* grid-row: 2; */
+}
+
+#header {
+   height: 70px;
+   width: 1750px;
+   margin-top: 20px;
+   margin-left: 92px;
+   display: flex;
+   flex-direction: row ;
+   /* align-content: start; */
+   /* justify-content: flex-start; */
+   /* height: 60px; */
    z-index: 1;
-   background-color: #000000af;
-   border-radius: 3px;
-   border: #d1d1d19b 3px double;
-   outline: #80808083 1px outset;
-   padding: 10px;
-   gap: 30px;
+   /* background-color: #323136c4; */
+   /* border-bottom-right-radius: 0px; */
+   /* border: #b49e9e9b 3px double; */
+   padding: 0px;
+   gap: 290px;
+   border-bottom: none;
+   overflow: visible;
+}
+
+#tab-div {
+   display: flex;
+   width: min-content;
+   height: min-content;
 }
 
 .tab {
-   width: 250px;
+   width: 150px;
    height: 50px;
-   margin: 10px 25px;
-   background-color: #ffffff;
+   margin: 10px ;
+   background-color: #201f1af8;
    display: flex;
    justify-content: center;
    align-self: end;
    align-items: center;
-   font-size: 28px;
-   font-weight: bold;
-   z-index: 2;
-   border: #ff5e00 solid 1px;
+   font-size: 1.5rem;
+   /* font-weight: bold; */
+   /* z-index: 1; */
+   color: #ffffff;
+   /* border: #ffffff75 solid 1px; */
+   border-bottom: solid 1px rgba(255, 255, 255, 0.363);
+   border-right: solid 1px rgba(255, 255, 255, 0.151);
 }
 
-#home-img {
-   height: 100%;
-   width: 100%;
-   position: absolute;
-   align-self: flex-start;
-   z-index: 0;
-}
+
 #logo {
-   width: 130px;
-   height: 130px;
+   width: 150px;
+   height: 120px;
    border-radius: 80px;
-}
-
-
-#name {
-   font-size: 60px;
-   font-style: italic;
-   font-weight: lighter;
-   font-family: fantasy;
-   align-self: flex-start;
+   border:  1px solid #55534cf8;
+   outline: inset 3px #1b1b1b ;
    z-index: 1;
-   flex-shrink: 0;
-   width: 40%;
-   color: white;   
-   
+   margin-top: -12px;
+   /* opacity: 45%; */
 }
+
+
+
 
 #schedule {
-   height: max-content;
-   margin-top: 20px;
-   background-color: #000000af;
-   color: #ffffff;
-   font-size: 20px;
    display: flex;
-   flex-flow: row wrap;
-   grid-column: 1 / 14;
-   grid-row: 3;
-   margin-left: 18px;
-   padding-bottom: 10px;
-   justify-content: space-evenly;
-   align-items: center;
-   border-radius: 5px;
-   border: #d1d1d16c 1px double;
-   outline: #80808083 1px outset;
-   z-index: 1;
+   margin-top: 0px;
+   margin-left: 92px;  
+   background: rgba(249, 249, 255, 0.479);
+   background: linear-gradient(0deg, #e1e1e1d7 6%, rgba(163,163,163,1) 52%, rgba(192, 203, 205, 0.726) 100%);
+   z-index: 0;
+   width: min-content;
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
+   padding: 20px;
+   width: 1750px;
+   border-bottom: outset black 1px;
+   /* border-radius: 10px; */
+   gap: 37px;
 }
 
-#schedule-header {
-   width: 100%;
-   text-align: center;
-   font-size: 50px;
-   margin-bottom: 10px;
+#schedule div:nth-child(4) {
+   margin-top: 20px;
 }
+
+
 .day {
-   width: 212px;
-   height: 100px;
-   background-color: #000000;
-   gap: 5px;
-   /* margin-bottom: 10px; */
-   border-radius: 3px;
-   border: 1px double #8b8b8b67;
-   outline: 1px outset #b4b4b4b9;
+   gap: 15px;
+   font-size: 1.3rem;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   border-top-right-radius: 0px;
+   border-bottom-right-radius: 0px;
    padding-bottom: 3px;
    display: flex;
    flex-direction: column;
-   justify-content: flex-start;
-   
+   height: min-content;
+   width: min-content;
    align-items: center;
-   
 }
 .label , .wtf {
    width: 212px;
-   background-color: #000000;
-   /* margin-bottom: 10px; */
-   border-radius: 3px;
-   border: 1px double #8b8b8b67;
-   outline: 1px outset #b4b4b4b9;
-   padding-bottom: 3px;
+   margin-bottom: 3px;
+   font-size: 26px;
+   font-weight: bolder;
    display: flex;
+   border-bottom: 1px outset rgba(0, 0, 0, 0.288);
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    
 }
 .wtf {
+   margin-top: 10px;
    margin-bottom: 18px;
 }
 
-#content {
-   z-index: 1;
-   /* height: 960px; */
-   width: 100%;
-   display: grid;
-   grid-template-columns: 225px 225px 112.5px 112.5px 225px 225px 5px 225px 225px 190px 220px;
-   grid-template-rows: 80px 80px 20px 160px 20px 220px 220px 220px 220px 220px ;
 
-   padding-bottom: 10px;
-   padding-left: 50px;
+#time-one, #time-two {
+   font-style: italic;
+   
+}
+#banner-div { 
+   margin-top: 90px;
+   margin-left: 117px;
+   opacity: 100%;
 }
 
-#about {
-   z-index: 1;
-   grid-area: 6 / 1 / 12 / 7;
-   background-color: #0000008a;
+#banner {
+   width: 1220px;
+   height: 500px;
+   background-size: contain;
+   position: absolute;
+   border-radius: 15px;
+   outline: #746767aa 2px ridge;
+   border: #767171c7 5px double;
+   opacity: 95%;
+   z-index: -1;
+}
+
+#banner-button {
+   width: 276px;
+   height: 93px;
+   margin-top: 200px;
+   margin-left: 890px;
+   border-radius: 8px;
+   
+   background-color: #7e1912;
+   outline: #040404 1px ridge;
+   border: #000000 1px inset;
+   font-family: papyrus;
+   font-size: 40px;
    color: white;
-   font-size: 25px;
-   padding: 5px;
-   margin-top: 10px;
-   margin-left: 13px;
-   display: grid;
-   grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
-   grid-template-rows: 100px  20px 50px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 150px;
-   /* margin-bottom: 10px;*/
-   border-radius: 2px;
-   border: 1px double #8b8b8b57;
-   outline: 1px outset #b4b4b496;
 }
-h2 {
-   width: 95%;
-   grid-column: 1 / 12;
-   text-align: center;
-   margin-top: -2px;
-   font-family: helvetica;
-   font-style: oblique;
-   margin-left: 20px;
+
+
+#border {
+   border-radius: 10px;
+   background-size: contain;
+   opacity: 20%;
 }
-#about-one, #about-two,
-#about-three, #about-four {
-   font-family: helvetica;
-   font-size: 25px;
-   font-weight: bold;
-   outline: 2px inset #b4b4b496;
-}
-#about-one {
-   align-self: flex-start;
-   display: flex;
-   flex-flow: row wrap;
-   grid-column: 1 / 7;
-   grid-row: 3;
-   padding: 10px;
-}
-#about-two {
-   height: min-content;
-   grid-column:  8/ 11;
-   grid-row: 6;
-   display: flex;
-   flex-direction: column;
-   text-align: left;
-   gap: 40px;
-   margin-left: 5px;
-   padding: 10px;
+/* #content {
+   background-color: #323136c4;
+   /* z-index: ; */
+   /* height: 960px; */
+   /* width: min-content; */
+   /* display: grid; */
+   /* grid-template-columns: 225px 225px 225px 225px 225px 225px 225px 225px 225px; */
+   /* grid-template-rows: 180px 160px  220px 220px 220px 220px 220px 220px 220px 220px ; */
+   
+   /* margin-bottom: 10px; */
+   /* margin-left: 50px; */
+   /* margin-top: 10px; */
+   /* } */ 
+   
+   #about {
+      z-index: 1;
+      font-size: 1.4rem;
+      padding-top: 0px;
+      margin-left: 92px;
+      width: 1750px;
+      display: flex;
+      flex-flow: row wrap;
+      background: linear-gradient(0deg, #e1e1e1d7 6%, rgba(163,163,163,1) 52%, rgba(192, 203, 205, 0.726) 100%);
+      gap: 120px;
+      padding-bottom: 120px;
+   }
+   
+   #about-one, #about-two,
+   #about-three, #about-four {
+      font-family: papyrus;
+      font-size: 25px;
+      font-weight: bold;
+   }
+   #about-one {
+      align-self: flex-start;
+      display: flex;
+      flex-flow: row wrap;
+      width: 100%;
+      height: min-content;
+      padding-left: 50px;
+   }
+
+   #about-one-text {
+      width: 32%;
+      /* margin-top: 20px; */
+      margin-left: 70px;
+      text-align: center;
+   }
+   #about-two {
+      background: linear-gradient(0deg, #0c0c0c05 70%, rgba(163, 163, 163, 0.096) 52%, rgba(0, 0, 0, 0.247) 100%);
+      border-radius: 10px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 40px;
+      font-family: papyrus;
+      text-align: center;
+      gap: 20px;
+      /* margin-top: 20px; */
+      padding-top: 40px;
 }
 #about-three {
    grid-row: 14 / 18;
@@ -210,27 +267,30 @@ h2 {
    overflow: hidden;
 }
 #about-four {
-   grid-row: 11 / 18;
-   grid-column: 1 / 7;
-   background-color: #0000004f;
+   display: flex;
    height: min-content;
    overflow: hidden;
    padding: 10px;
+   gap: 10px;
+}
+
+#about-four-left {
+   width: 50%;
+   display: flex;
+   flex-direction: column;
 }
 
 #pool-img {
-   width: 350px;
-   height: 180px;
-   margin-top: 20px;
-   margin-left: -20px;
-   border: 1px solid rgba(255, 255, 255, 0.281);
-   border-radius: 2px;
+   width: 1050px;
+   height: 400px;
+   /* border: 1px solid rgba(255, 255, 255, 0.281); */
+   border-radius: 5px;
 }
 
 #karaoke {
-  
-   margin-left: -15px;
-   opacity: 80%;
+   width: 600px;
+   /* margin-left: -15px; */
+   opacity: 60%;
    height: 120px;
 }
 
@@ -244,57 +304,92 @@ h2 {
 }
 #about-list {
    width: 40%;
-   text-align: left;
+   font-size: 30px;
+   text-align: center;
    text-indent: 1px;
    font-style: oblique;
    display: flex;
    flex-direction: column;
    gap: 20px;
+   list-style: none;
+   margin-left: 110px;
 }
 
 #menu {
-   grid-column: 8 / 14;
-   grid-row: 6 / 9;
-   background-color: #323136c4;
-   border-radius: 40px;
-   border: 1px solid rgba(255, 255, 255, 0.521);
+   height: 90vh;
+   width: 1750px;
+   margin-left: 92px;
+   grid-column: 6 / 10;
+   grid-row: 7 / 7;
+   background: linear-gradient(0deg, #e1e1e1d7 6%, rgba(163,163,163,1) 52%, rgba(192, 203, 205, 0.726) 100%);
+   /* border-radius: 40px; */
+   /* border: 1px solid rgba(255, 255, 255, 0.521); */
+   padding: 20px;
    display: flex;
-   flex-direction: column;
-   align-items: center;
-   gap: 10px;
+   flex-flow: row wrap;
+   padding-left: 50px;
+   gap: 20px;
    z-index: 1;
-   margin-top: 10px;
+   /* margin-top: 10px; */
 }
 
 #menu-head {
-   color: white;
-   text-align: center;
-   opacity: 80%;
+   width: 80%;
+   height: min-content;
+   color: rgba(0, 0, 0, 0.884);
    font-size: 90px;
-   border-bottom: rgba(255, 255, 255, 0.404) solid 1px;
+
+   border-bottom: rgba(17, 17, 17, 0.466) solid 1px;
    font-family: fantasy;
    font-style: oblique;
+   padding: 10px;
+   margin-top: 10px;
 }
 
-.menu-text {
-   font-size: 30px;
-   color: white;
-   font-style: italic;
+.menu-pizza {
+   width: 50%;
+   /* padding-bottom: 10px; */
+   padding-left: 500px;
+   font-size: 140px;
+   font-family: papyrus;   
+   font-weight: bold;
+   text-align: center;  
+   /* margin-left: -330px; */
 }
+
+.menu-nacho {
+   width: 30%;
+   font-size: 140px;
+   font-family: papyrus;   
+   font-weight: bold;
+}
+
 
 #pizza {
-   width: 80%;
-   height: 210px;
+   width: 600px;
+   height: 300px;
+   border: 1px solid rgba(255, 255, 255, 0.308);
+   border-radius: 5px;
+   /* margin-right: 500px; */
 }
 
 #nachos {
-   width: 80%;
-   height: 210px;
+   width: 600px;
+   height: 300px;
+   border: 1px solid rgba(255, 255, 255, 0.308);
+   border-radius: 5px;
+   margin-right: 400px;
 }
 
 #vip {
-   grid-row: 9 / 12;
-   grid-column:  7 / 14;
-   width: 100%;
-   height: 100%;
+  
+   width: 1200px;
+   height: 600px;
+
+}
+
+#scroll-down {
+   position: fixed;
+   left: 10px;
+   bottom: 10px;
 }
